--- a/apps/sistema-demo/src/app/sistema-pages/pastanaga-pages-override/sistema-toasts/sistema-toast.component.html
+++ b/apps/sistema-demo/src/app/sistema-pages/pastanaga-pages-override/sistema-toasts/sistema-toast.component.html
@@ -31,7 +31,7 @@
       </li>
       <li>
         <strong>error</strong>
-        : destructive toast with "Error" title and a circle-cross icon. Stay open until the user clicks on the button.
+        : destructive toast with "Error" title and a warning icon. Stay open until the user clicks on the button.
       </li>
     </ul>
   </pa-demo-description>
