--- a/libs/common/src/lib/resources/resource-list/processed-resource-table/processed-resource-table.component.html
+++ b/libs/common/src/lib/resources/resource-list/processed-resource-table/processed-resource-table.component.html
@@ -162,7 +162,7 @@
               <pa-icon
                 class="error"
                 *ngIf="row.resource.metadata?.status === 'ERROR'"
-                name="circle-cross"></pa-icon>
+                name="warning"></pa-icon>
             </div>
           </div>
         </pa-table-cell>
