--- a/libs/common/src/lib/resources/resource-list/resource-list.component.html
+++ b/libs/common/src/lib/resources/resource-list/resource-list.component.html
@@ -97,7 +97,7 @@
         class="status-button"
         *ngIf="(statusCount | async)?.error || 0 > 0">
         <pa-button
-          icon="circle-cross"
+          icon="warning"
           size="small"
           kind="destructive"
           aspect="basic"
