--- a/libs/common/src/lib/upload/upload-progress/upload-progress.component.html
+++ b/libs/common/src/lib/upload/upload-progress/upload-progress.component.html
@@ -33,7 +33,7 @@
             <div
               class="error body-xs"
               *ngIf="file.failed && !file.conflicts">
-              <pa-icon name="circle-cross"></pa-icon>
+              <pa-icon name="warning"></pa-icon>
               {{ 'upload.error' | translate }}
             </div>
 
