--- a/libs/common/src/lib/resources/resource-list/resources-table.component.scss
+++ b/libs/common/src/lib/resources/resource-list/resources-table.component.scss
@@ -52,9 +52,9 @@ table {
 
   .title-status {
     margin-left: auto;
-    color: $color-secondary-strong;
+    color: $color-dark-stronger;
     .error {
-      color: $color-secondary-stronger;
+      color: $color-secondary-strong;
     }
   }
 }
