--- a/libs/common/src/lib/resources/resource-list/resource-list.component.html
+++ b/libs/common/src/lib/resources/resource-list/resource-list.component.html
@@ -74,20 +74,20 @@
       <div
         data-cy="pending-access"
         class="status-button"
+        [class.with-margin]="(statusCount | async)?.error || 0 > 0"
         *ngIf="(statusCount | async)?.pending || 0 > 0">
         <pa-button
           icon="clock-dash"
           size="small"
-          kind="destructive"
           aspect="basic"
+          iconAndText
           #pendingPopoverDirective="paPopoverRef"
           [paPopover]="pendingPopover"
           paPopoverOffset="0px"
           [active]="statusDisplayed.value === 'PENDING'"
           (click)="displayStatus('PENDING')">
-          {{ 'resource.status-help.pending' | translate }}
+          {{ (statusCount | async)?.pending }}
         </pa-button>
-        <div class="file-count">{{ (statusCount | async)?.pending }}</div>
       </div>
       <pa-popover #pendingPopover>
         <div class="popover-content">{{ 'resource.pending_resources_popover' | translate }}</div>
@@ -101,14 +101,14 @@
           size="small"
           kind="destructive"
           aspect="basic"
+          iconAndText
           #failedPopoverDirective="paPopoverRef"
           [paPopover]="failedPopover"
           paPopoverOffset="0px"
           [active]="statusDisplayed.value === 'ERROR'"
           (click)="displayStatus('ERROR')">
-          {{ 'resource.status-help.failed' | translate }}
+          {{ (statusCount | async)?.error }}
         </pa-button>
-        <div class="file-count">{{ (statusCount | async)?.error }}</div>
       </div>
       <pa-popover #failedPopover>
         <div class="popover-content">{{ 'resource.failed_resources_popover' | translate }}</div>
