Improve home page layout
  - update gaps between blocks
  - make all blocks with consistent look
  - remove download desktop block
  - add upload data block
  - update blocks visibility permissions

--- a/libs/sistema/styles/_apps-common.scss
+++ b/libs/sistema/styles/_apps-common.scss
@@ -37,3 +37,11 @@ code.endpoint {
 .pa-popup {
   min-width: rhythm(16);
 }
+
+pa-button.full-width {
+  display: flex;
+
+  .pa-button {
+    flex: 1 0 auto;
+  }
+}
