--- a/libs/sistema/theme/tokens/_buttons.tokens.scss
+++ b/libs/sistema/theme/tokens/_buttons.tokens.scss
@@ -20,6 +20,7 @@ $padding-button-icon-medium: rhythm(1);
 $padding-button-icon-large: rhythm(1.5);
 
 $font-size-button-medium: font-size(s);
+$font-size-button-large: font-size(s);
 
 // Shadows
 $shadow-button-solid-hover: none;
