--- a/libs/sistema/theme/tokens/_spacing.tokens.scss
+++ b/libs/sistema/theme/tokens/_spacing.tokens.scss
@@ -20,6 +20,7 @@ $rhythm: (
   12: ($spacer * 12),     //  12   unit -  96px -  6     rem
   13: ($spacer * 13),     //  13   unit - 104px -  6.5   rem
   14: ($spacer * 14),     //  14   unit - 112px -  7     rem
+  15: ($spacer * 15),     //  15   unit - 120px -  7.5   rem
   16: ($spacer * 16),     //  16   unit - 128px -  8     rem
   20: ($spacer * 20),     //  20   unit - 160px - 10     rem
   22: ($spacer * 22),     //  22   unit - 176px - 11     rem
@@ -31,6 +32,7 @@ $rhythm: (
   41: ($spacer * 41),     //  41   unit - 328px - 20.5   rem
   48: ($spacer * 48),     //  48   unit - 384px - 24     rem
   50: ($spacer * 50),     //  50   unit - 400px - 25     rem
+  53: ($spacer * 53),     //  53   unit - 424px - 26.5   rem
   56: ($spacer * 56),     //  56   unit - 448px - 28     rem
   60: ($spacer * 60),     //  60   unit - 480px - 30     rem
   64: ($spacer * 64),     //  64   unit - 512px - 32     rem
