Finish upload data page
  - Redirect to resources page after upload
  - Display explicit download and open options for Nuclia desktop
  - Add missing translations

--- a/libs/common/src/lib/upload/upload-data/upload-data.component.html
+++ b/libs/common/src/lib/upload/upload-data/upload-data.component.html
@@ -29,13 +29,24 @@
     <div class="desktop-option">
       <p class="body-m description">
         <span class="title-xs">Nuclia Desktop.</span>
-        The easiest and fastest way to upload data to Nuclia from your data source:
+        {{ 'stash.upload.desktop.description' | translate }}
       </p>
-      <pa-button
-        class="desktop-button"
-        (click)="openDesktop()">
-        <img src="assets/logos/nuclia-desktop-white.svg" />
-      </pa-button>
+      <div class="desktop-actions">
+        <pa-button
+          icon="download"
+          iconAndText
+          (click)="downloadDesktop()">
+          {{ 'stash.upload.desktop.download' | translate }}
+        </pa-button>
+        <div class="body-m">or</div>
+        <pa-button
+          icon="square-arrow"
+          iconAndText
+          (click)="openDesktop()">
+          {{ 'stash.upload.desktop.open' | translate }}
+        </pa-button>
+      </div>
+
       <div class="sources-container">
         <stf-desktop-sources showDetails></stf-desktop-sources>
       </div>
