--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
@@ -22,40 +22,62 @@
   </div>
 
   <div class="home-main-layout">
-    <div
-      *ngIf="isAccountManager | async"
-      class="left-column">
-      <div class="container chart-container">
-        <div class="chart-header">
-          <div class="title-m">{{ 'stats.total_search' | translate }}</div>
-          <div
-            *ngIf="locale | async as loc"
-            class="display-m">
-            {{ totalSearch | async | number: '1.0-0' : loc }}
+    <div class="left-column">
+      <ng-container *ngIf="isAccountManager | async">
+        <div class="container chart-container">
+          <div class="chart-header">
+            <div class="title-m">{{ 'stats.total_search' | translate }}</div>
+            <div
+              *ngIf="locale | async as loc"
+              class="display-m">
+              {{ totalSearch | async | number: '1.0-0' : loc }}
+            </div>
           </div>
+          <app-empty-chart
+            *ngIf="!(search | async)"
+            [numLines]="6"></app-empty-chart>
+          <app-line-chart [data]="(search | async) || []"></app-line-chart>
         </div>
-        <app-empty-chart
-          *ngIf="!(search | async)"
-          [numLines]="6"></app-empty-chart>
-        <app-line-chart [data]="(search | async) || []"></app-line-chart>
-      </div>
 
-      <div class="container chart-container">
-        <div class="chart-header">
-          <div class="title-m">{{ 'stats.processing_time' | translate }}</div>
+        <div class="container chart-container">
+          <div class="chart-header">
+            <div class="title-m">{{ 'stats.processing_time' | translate }}</div>
+          </div>
+          <app-empty-chart
+            *ngIf="!(processing | async)"
+            [numLines]="3"></app-empty-chart>
+          <app-bar-chart [data]="(processing | async) || []"></app-bar-chart>
         </div>
-        <app-empty-chart
-          *ngIf="!(processing | async)"
-          [numLines]="3"></app-empty-chart>
-        <app-bar-chart [data]="(processing | async) || []"></app-bar-chart>
-      </div>
+      </ng-container>
     </div>
 
-    <div
-      *ngIf="isKbAdmin | async"
-      class="right-column">
+    <div class="right-column">
       <div
-        class="account-status"
+        class="container upload-data"
+        *ngIf="isKbContrib | async">
+        <div class="title-m">{{ 'stash.home.upload-block.title' | translate }}</div>
+        <pa-button
+          [routerLink]="(kbUrl | async) + '/upload'"
+          class="full-width"
+          aspect="solid"
+          kind="primary"
+          iconAndText
+          iconSize="medium"
+          icon="upload">
+          <a [routerLink]="(kbUrl | async) + '/upload'">
+            {{ 'stash.upload_data' | translate }}
+          </a>
+        </pa-button>
+        <div>
+          {{ 'stash.home.upload-block.description' | translate }}
+          <ng-container *ngIf="isDownloadDesktopEnabled | async">
+            {{ 'stash.home.upload-block.description-desktop' | translate }}
+          </ng-container>
+        </div>
+        <stf-desktop-sources *ngIf="isDownloadDesktopEnabled | async"></stf-desktop-sources>
+      </div>
+      <div
+        class="container account-status"
         *ngIf="isAccountManager | async">
         <app-account-status></app-account-status>
       </div>
@@ -79,29 +101,15 @@
       </div>
 
       <div class="container state-container">
-        <div class="title-s">
-          {{ stateLabel | async }}
+        <div class="state">
+          <span class="body-m">{{ 'stash.state.label' | translate }}</span>
+          <span class="title-s">{{ stateLabel | async }}</span>
         </div>
-        <pa-button (click)="toggleKbState()">
+        <pa-button
+          *ngIf="isKbAdmin | async"
+          (click)="toggleKbState()">
           {{ ((isPublished | async) ? 'account.stash.retire' : 'account.stash.publish') | translate }}
         </pa-button>
-      </div>
-
-      <div
-        class="container go-to-desktop"
-        *ngIf="isDownloadDesktopEnabled | async">
-        <img
-          src="assets/logos/nuclia-desktop.svg"
-          alt="Nuclia Desktop" />
-        <p>{{ 'stash.desktop.description' | translate }}</p>
-        <div class="desktop-button">
-          <pa-button (click)="downloadDesktop()">
-            {{ 'stash.desktop.button' | translate }}
-          </pa-button>
-          <p>
-            <small>{{ 'stash.desktop.text' | translate }}</small>
-          </p>
-        </div>
       </div>
     </div>
   </div>
