--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.scss
@@ -3,8 +3,8 @@
 .knowledge-box-home {
   padding: rhythm(6) var(--app-layout-margin-right);
 
-  $flex-gap: rhythm(4);
-  $width-right-column: rhythm(40) + rhythm(6);
+  $flex-gap: rhythm(3);
+  $width-right-column: rhythm(40) + rhythm(1);
   .home-main-layout {
     display: flex;
     width: 100%;
@@ -17,15 +17,17 @@
   }
 
   .right-column {
+    display: flex;
     flex: 0 0 auto;
+    flex-direction: column;
+    gap: rhythm(2);
     width: $width-right-column;
   }
 
   .container {
-    padding: rhythm(3);
+    padding: rhythm(1.5) rhythm(2);
     background-color: $color-neutral-lightest;
     border-radius: rhythm(0.5);
-    margin-bottom: $flex-gap;
   }
 
   .chart-container {
@@ -38,10 +40,6 @@
     display: flex;
     justify-content: space-between;
     line-height: 1;
-    margin-bottom: rhythm(4);
-  }
-
-  .account-status {
     margin-bottom: rhythm(4);
   }
 
@@ -88,30 +86,14 @@
     }
   }
 
-  .go-to-desktop {
-    background: $color-neutral-lighter;
-    font-weight: $font-weight-regular;
-    padding: rhythm(5);
-    text-align: center;
+  .upload-data {
+    display: flex;
+    flex-direction: column;
+    gap: rhythm(1.5);
 
-    img {
-      margin-bottom: rhythm(2);
-    }
-  }
-
-  .desktop-button {
-    margin-top: rhythm(4);
-    text-align: center;
-
-    p {
-      display: flex;
-      justify-content: center;
-      margin: rhythm(1.5) 0 0;
-    }
-    small {
-      font-size: size(xs);
-      font-style: italic;
-      font-weight: $font-weight-semi-bold;
+    stf-desktop-sources {
+      display: block;
+      margin-bottom: rhythm(0.5);
     }
   }
 
@@ -123,15 +105,9 @@
   .state-container {
     align-items: center;
     display: flex;
-    padding: rhythm(2) rhythm(3);
 
-    .title-s {
+    .state {
       flex: 1 0 auto;
-      font-weight: $font-weight-bold;
     }
-  }
-
-  .state {
-    font-weight: $font-weight-semi-bold;
   }
 }
