[sc-7168] Unify titles in Dashboard pages

--- a/apps/dashboard/src/app/activity/activity-download.component.html
+++ b/apps/dashboard/src/app/activity/activity-download.component.html
@@ -1,5 +1,5 @@
 <div class="activity-download">
-  <h2 class="display-s">{{ 'stash.side.activity' | translate }}</h2>
+  <h1>{{ 'stash.side.activity' | translate }}</h1>
   <pa-tabs
     class="primary-tabs"
     noSlider
