Fix no dataset import on empty monolingual
monolingual KB doesn't support dataset import, but they should display a message when they are empty

--- a/libs/common/src/lib/resources/resource-list/resource-list.component.html
+++ b/libs/common/src/lib/resources/resource-list/resource-list.component.html
@@ -166,13 +166,13 @@
     </ng-container>
 
     <div
-      *ngIf="isMainView && emptyKb && !query && !isFiltering && !standalone && (isMonoLingual | async) === false"
+      *ngIf="isMainView && emptyKb && !query && !isFiltering && !standalone"
       class="empty-kb"
       data-cy="empty-kb">
       <p>
         <strong>{{ 'resource.empty' | translate }}</strong>
       </p>
-      <ng-container *ngIf="neverGotData | async">
+      <ng-container *ngIf="(neverGotData | async) && (isMonoLingual | async) === false">
         <p>{{ 'resource.empty_import' | translate }}</p>
         <stf-dataset-selector (imported)="onDatasetImport($event)"></stf-dataset-selector>
       </ng-container>
