--- a/libs/common/src/lib/upload/upload-data/upload-data.component.scss
+++ b/libs/common/src/lib/upload/upload-data/upload-data.component.scss
@@ -22,10 +22,13 @@
         margin-bottom: rhythm(2);
       }
 
-      .desktop-actions {
-        align-items: center;
-        display: flex;
-        gap: rhythm(2);
+      .desktop-button {
+        img {
+          width: rhythm(20);
+        }
+        ::ng-deep .pa-button-label {
+          display: flex;
+        }
       }
 
       .sources-container {
