[sc-7012] Resource list refactoring using routing
Redirect to pending resources after uploading from upload data page

--- a/libs/common/src/lib/resources/resource-list/pending-resources-table/pending-resources-table.component.html
+++ b/libs/common/src/lib/resources/resource-list/pending-resources-table/pending-resources-table.component.html
@@ -1,3 +1,10 @@
+<div
+  data-cy="spinner"
+  class="loading-shade"
+  *ngIf="isLoading">
+  <nsi-spinner></nsi-spinner>
+</div>
+
 <div class="resource-table-header">
   <div
     class="resource-bulk-actions"
@@ -42,14 +49,14 @@
           *ngIf="isAdminOrContrib | async">
           <pa-checkbox
             data-cy="select-all"
-            [value]="allSelected"
-            [paTooltip]="(allSelected ? 'generic.deselect_all' : 'generic.select_all') | translate"
+            [value]="allSelected | async"
+            [paTooltip]="((allSelected | async) === true ? 'generic.deselect_all' : 'generic.select_all') | translate"
             [disabled]="bulkAction.inProgress"
             (change)="toggleAll()"></pa-checkbox>
         </pa-table-cell>
       </pa-table-sortable-header>
 
-      <pa-table-row *ngFor="let row of data; trackBy: trackById">
+      <pa-table-row *ngFor="let row of data | async; trackBy: trackById">
         <pa-table-cell *ngIf="isAdminOrContrib | async">
           <pa-checkbox
             [value]="selection.includes(row.resource.id)"
