--- a/libs/common/src/lib/resources/resource-list/resources-table.component.scss
+++ b/libs/common/src/lib/resources/resource-list/resources-table.component.scss
@@ -67,3 +67,16 @@ table {
 .classification-cell ::ng-deep .pa-table-grid--cell {
   overflow-x: auto;
 }
+
+.loading-shade {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.15);
+  z-index: 20;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
