--- a/libs/common/src/lib/resources/resource-list/error-resources-table/error-resources-table.component.html
+++ b/libs/common/src/lib/resources/resource-list/error-resources-table/error-resources-table.component.html
@@ -1,3 +1,10 @@
+<div
+  data-cy="spinner"
+  class="loading-shade"
+  *ngIf="isLoading">
+  <nsi-spinner></nsi-spinner>
+</div>
+
 <div class="resource-table-header">
   <div
     class="resource-bulk-actions"
@@ -20,7 +27,7 @@
         (click)="bulkReprocess()">
         {{ (selection.length === 1 ? 'generic.reindex' : 'generic.reindex-plural') | translate }}
       </pa-button>
-      <ng-container *ngIf="allSelected && errorCount > selection.length && !bulkAction.inProgress">
+      <ng-container *ngIf="(allSelected | async) === true && errorCount > selection.length && !bulkAction.inProgress">
         <pa-button
           aspect="basic"
           kind="primary"
@@ -56,14 +63,14 @@
           header
           *ngIf="isAdminOrContrib | async">
           <pa-checkbox
-            [value]="allSelected"
-            [paTooltip]="(allSelected ? 'generic.deselect_all' : 'generic.select_all') | translate"
+            [value]="allSelected | async"
+            [paTooltip]="((allSelected | async) === true ? 'generic.deselect_all' : 'generic.select_all') | translate"
             [disabled]="bulkAction.inProgress"
             (change)="toggleAll()"></pa-checkbox>
         </pa-table-cell>
       </pa-table-sortable-header>
 
-      <pa-table-row *ngFor="let row of data; trackBy: trackById">
+      <pa-table-row *ngFor="let row of data | async; trackBy: trackById">
         <pa-table-cell *ngIf="isAdminOrContrib | async">
           <pa-checkbox
             [value]="selection.includes(row.resource.id)"
