--- a/libs/search-widget/src/widgets/search-widget/SearchBar.scss
+++ b/libs/search-widget/src/widgets/search-widget/SearchBar.scss
@@ -45,10 +45,13 @@
   .search-results-container {
     --vertical-spacing: var(--rhythm-1);
 
-    .search-results {
-      max-height: calc(100vh - var(--top-spacing)*2 - var(--search-bar-height) - var(--answer-height) - var(--vertical-spacing)*2);
-      padding: var(--vertical-spacing) 0;
+    .results {
+      max-height: calc(100vh - var(--top-spacing)*2 - var(--search-bar-height));
       overflow: auto;
+    }
+
+    .search-results {
+      padding: var(--vertical-spacing) 0;
     }
   }
 }
