--- a/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
+++ b/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
@@ -44,7 +44,8 @@
         <div class="options">
           <pa-radio-group
             [formControlName]="conf.id"
-            [name]="conf.id">
+            [name]="conf.id"
+            (valueChange)="conf.id === 'generative_model' ? updatePrompts($event) : undefined">
             <pa-radio
               *ngFor="let value of conf.data.options"
               [value]="value.value">
@@ -88,6 +89,58 @@
                   </pa-textarea>
                 </ng-container>
               </ng-container>
+            </div>
+          </div>
+          <div *ngIf="conf.id === 'generative_model' && !!currentPromptConfig && currentPromptKey">
+            <div formGroupName="user_prompts">
+              <div
+                *ngFor="let key of promptKeys"
+                [formGroupName]="key">
+                <div [hidden]="key !== currentPromptKey">
+                  <div
+                    *ngIf="promptConfigurations.schemas[key].properties.prompt"
+                    class="user-prompts">
+                    <label class="title-s">{{ 'stash.create.user_prompts.prompt' | translate }}</label>
+                    <pa-textarea
+                      formControlName="prompt"
+                      [help]="promptConfigurations.schemas[key].properties.prompt.info">
+                      {{ promptConfigurations.schemas[key].properties.prompt.title }}
+                    </pa-textarea>
+                    <pa-select
+                      formControlName="prompt_examples"
+                      [dim]="true"
+                      [label]="'stash.create.user_prompts.examples' | translate"
+                      (valueChange)="setPrompt('prompt', key, $event)">
+                      <pa-option
+                        *ngFor="let option of promptConfigurations.schemas[key].properties.prompt.examples"
+                        [value]="option">
+                        {{ option }}
+                      </pa-option>
+                    </pa-select>
+                  </div>
+                  <div
+                    *ngIf="promptConfigurations.schemas[key].properties.system"
+                    class="user-prompts">
+                    <label class="title-s">{{ 'stash.create.user_prompts.system' | translate }}</label>
+                    <pa-textarea
+                      formControlName="system"
+                      [help]="promptConfigurations.schemas[key].properties.system.info">
+                      {{ promptConfigurations.schemas[key].properties.system.title }}
+                    </pa-textarea>
+                    <pa-select
+                      formControlName="system_examples"
+                      [dim]="true"
+                      [label]="'stash.create.user_prompts.examples' | translate"
+                      (valueChange)="setPrompt('system', key, $event)">
+                      <pa-option
+                        *ngFor="let option of promptConfigurations.schemas[key].properties.system.examples"
+                        [value]="option">
+                        {{ option }}
+                      </pa-option>
+                    </pa-select>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
