Avoid calling subscribe in resource-list.service.ts methods
improve "in resource" search results style

--- a/libs/common/src/lib/resources/resource-list/processed-resource-table/processed-resource-table.component.html
+++ b/libs/common/src/lib/resources/resource-list/processed-resource-table/processed-resource-table.component.html
@@ -164,6 +164,7 @@
                 </div>
                 <small
                   *ngIf="row.description"
+                  class="body-xs"
                   data-cy="resource-description">
                   {{ row.description }}
                 </small>
