[sc-7203] add feedback when clicking on the copy button

--- a/apps/dashboard/src/app/redirect/redirect.component.scss
+++ b/apps/dashboard/src/app/redirect/redirect.component.scss
@@ -10,3 +10,17 @@ code {
   margin-bottom: rhythm(3);
   word-break: break-all;
 }
+
+.copy {
+  align-items: center;
+  display: flex;
+  gap: rhythm(2);
+  pa-icon {
+    color: $color-primary-regular;
+    opacity: 0;
+    transition: opacity $transition-hint;
+    &.active {
+      opacity: 1;
+    }
+  }
+}
