--- a/apps/dashboard/src/app/redirect/redirect.component.html
+++ b/apps/dashboard/src/app/redirect/redirect.component.html
@@ -2,9 +2,14 @@
   <div *ngIf="displayToken | async; else redirect">
     <h2>{{ 'Authentication token' | translate }}</h2>
     <code>{{ token }}</code>
-    <pa-button (click)="copy()">
-      {{ 'generic.copy' | translate }}
-    </pa-button>
+    <div class="copy">
+      <pa-button (click)="copy()">
+        {{ 'generic.copy' | translate }}
+      </pa-button>
+      <pa-icon
+        [class.active]="copied"
+        name="check"></pa-icon>
+    </div>
   </div>
   <ng-template #redirect>
     {{ fromChromeExtension ? 'Redirecting to Nuclia Chrome extension…' : 'Redirecting to Nuclia Desktop…' }}
