Fix button label

--- a/apps/desktop/src/app/upload/select-files/select-files.component.html
+++ b/apps/desktop/src/app/upload/select-files/select-files.component.html
@@ -99,7 +99,7 @@
       kind="primary"
       [disabled]="(canSelectFiles | async) && selection.isEmpty()"
       (click)="upload()">
-      {{ 'generic.save' | translate }}
+      {{ 'generic.upload' | translate }}
     </pa-button>
     <pa-button
       qa="cancel"
